tests/snapshots/run_wpt_conformance__coreml_sin_float16_1D_constant_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
sin.https.any.js sin float16 1D constant tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '/private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983332060_0.mlmodelc/model.mil' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([186, 191, 50, 190, 212, 193, 49, 179, 71, 180, 194, 191, 204, 64, 184, 65, 163, 64, 2, 189, 26, 66, 14, 194, 65, 176, 234, 191, 236, 184, 228, 58, 215, 193, 78, 189, 104, 182, 5, 185, 195, 193, 228, 58, 208, 176, 120, 64]);
  }

  nodes {
    [sinOutput] = sin(operand_0, label="");
  }

  outputs { sinOutput; }
}
E5RT encountered an STL exception. msg = Espresso exception: "Network translation error": MIL->EIR translation error at /private/var/folders/fv/xdj1sjg16zndg0hpptw8n1_c0000gn/T/rustnn_coreml_1782983332060_0.mlmodelc/model.mil:6:12: Storage Reader expects file format version 2..
