tests/snapshots/run_wpt_conformance__coreml_slice_float32_4D_tensor_with_strides.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
slice.https.any.js slice float32 4D tensor with strides, coreml
 Failed to dispatch graph: coreml runtime failed: prediction failed: NSGenericException: Failed to add operation to E5 stream. E5RT: Unable to bind buffer to network. (2)

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    sliceInput: f32[2, 2, 3, 2];
  }

  nodes {
    [sliceOutput] = slice(sliceInput, label="", strides=[1, 1, 2, 1]);
  }

  outputs { sliceOutput; }
}
Unable to bind buffer to network. @ BindBuffersPort bindings cannot be changed while operation is in use in an execution stream. @ BindMemoryObjectPort bindings cannot be changed while operation is in use in an execution stream. @ BindMemoryObject
